# todo-list-fastapi-web-socket

./: Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 1506a40f1d20_create_todo_table.py  2cacedbdb1f4_test_create_table.py  35f40b81bbfc_test_create_table.py  3f0ef6c54b2c_remove_test.py  49cade5b7a3c_create_todo_table.py  6815ec36f2e8_create_todo_table.py  8d2671820b1a_create_todo_table.py  baa6de2da768_test_create_table.py  cca44ffa1756_create_todo_table.py
app/: main.py
app/config/: cors.py  exception_handler.py
app/db/: session.py
app/db/models/: __init__.py  todo.py
app/todo/api/: todo.py
app/todo/dto/: todo_request_dto.py  todo_response_dto.py
app/utils/: response.py
app/web_socket/: api.py  service.py
