[tool.poetry]
name = "todo-list-service"
version = "0.1.0"
description = ""
authors = ["chanbunlek <chanbunlek9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
pyodbc = "^5.2.0"
pydantic = "^2.11.7"
uvicorn = {extras = ["standard"], version = "^0.35.0"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
